--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "homepage": "https://github.com/mapbox/mapbox-gl-draw",
   "author": "mapbox",
   "license": "ISC",
-  "main": "./index.js",
-  "module": "./index.js",
+  "main": "dist/mapbox-gl-draw.js",
   "browser": "dist/mapbox-gl-draw.js",
   "style": "dist/mapbox-gl-draw.css",
   "scripts": {
@@ -18,7 +17,7 @@
     "tape": "tape -r @babel/register -r ./test/mock-browser.js test/*.test.js",
     "coverage": "NODE_ENV=test nyc --reporter html npm run tape && opener coverage/index.html",
     "build-token": "node build/generate-access-token-script.js",
-    "build": "rollup -c",
+    "build": "rollup -c && rollup -c --environment MINIFY:true",
     "build-min": "rollup -c --environment MINIFY:true",
     "prepublishOnly": "run-s build build-min",
     "watch": "rollup -c --watch",
@@ -45,6 +44,35 @@
   "nyc": {
     "sourceMap": false,
     "instrument": false
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.20",
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/register": "^7.22.15",
+    "@mapbox/cloudfriend": "^6.0.0",
+    "@mapbox/mapbox-gl-draw-static-mode": "^1.0.1",
+    "@rollup/plugin-buble": "^1.0.2",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@turf/bbox-clip": "^6.5.0",
+    "@turf/centroid": "^6.5.0",
+    "babel-plugin-istanbul": "^6.1.1",
+    "eslint": "8.49.0",
+    "eslint-config-mourner": "3.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "mock-browser": "^0.92.14",
+    "npm-run-all": "^4.1.5",
+    "nyc": "15.1.0",
+    "opener": "^1.5.2",
+    "rollup": "^2.79.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^15.0.3",
+    "st": "^3.0.0",
+    "synthetic-dom-events": "0.3.0",
+    "tape": "5.6.6"
   },
   "dependencies": {
     "@mapbox/geojson-area": "^0.2.2",
